# mycos

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  index.html
.github/workflows/: ci.yml  deploy-web-pr.yml  pages.yml
assets/: engine-CnUmYCX9.js  engine-CsVWQ64H.js  index-Co1qTOhI.js  index-DAh2tRyx.js  index-DP24LAxj.js
docs/: README.md  api.md  evolution_spec.md  kernels.md  spec.md
engine/: Cargo.toml
engine/src/: api.rs  checkpoint.rs  chunk.rs  cpu_ref.rs  crossover.rs  csr.rs  embed.rs  evolution.rs  genome.rs  gpu_eval.rs  layout.rs  lib.rs  link.rs  mutations.rs  policy.rs  scc.rs  scoring.rs  tasks.rs
engine/src/gpu/: device.rs  kernels.wgsl  mod.rs  pipeline.rs
engine/src/snapshots/: engine__policy__tests__freeze_last_stable.snap
fixtures/: README.md  fanout_1_to_1024.json  fanout_1_to_1024.myc  gated_child.json  links_basic.json  links_basic.links  noop.json  noop.myc  oscillator_2cycle.json  oscillator_2cycle.myc  parent_with_gate.json  parent_with_gate.myc  tiny_toggle.json  tiny_toggle.myc
web/: .eslintrc.cjs  .prettierignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.ts  mycos.test.ts  mycos.ts
