[package]
name = "engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wgpu = { version = "0.19", default-features = false, features = ["webgpu"], optional = true }
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
webgpu = ["wgpu"]

[dev-dependencies]
insta = { version = "1.34.0", features = ["json"] }
serde_json = "1.0"
