[package]
name = "engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wgpu = { version = "0.19", default-features = false, features = ["webgpu"], optional = true }
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
bitvec = { version = "1.0", features = ["serde"] }
rand = { version = "0.8", features = ["serde1"] }
rand_chacha = { version = "0.3", features = ["serde1"] }
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0"

[features]
default = []
webgpu = ["wgpu"]

[dev-dependencies]
insta = { version = "1.34.0", features = ["json"] }
